# GeoclimaProject

./: .gitignore  README.md  config.py  gui.py  main.py  pyproject.toml  requirements.txt  test.py
dados/: dados_estacoes_provider.py  dados_estacoes_service.py  dados_response.py
dados/application/: dados_estacoes_service.py
dados/domain/: dados.py  dados_request.py
dados/infrastructure/: dados_estacoes_provider.py
dados/presentation/: dados_controller.py
data/application/: weather_data_service.py
data/domain/: weather_data.py  weather_data_request.py
data/infrastructure/: weather_data_logger.py  weather_data_provider.py
data/presentation/: weather_data_controller.py
estacao/: estacao.py  estacoes_automaticas_provider.py  estacoes_automaticas_service.py
exporter/: csv_exporter.py  excel_exporter.py  exporter.py
geoclima_exporter/: csv_exporter.py  excel_exporter.py  exporter.py
geoclima_ui/frame/: action_frame.py  history_frame.py  input_frame.py  log_frame.py  progress_frame.py
geoclima_ui/input/: date_input.py  exceptions.py  labeled_input.py  password_input.py  text_input.py
geoclima_ui/task/: get_export_data.py
geoclima_weather/application/: weather_data_service.py
geoclima_weather/domain/: weather_data.py
geoclima_weather/infrastructure/model/: GetDailyStationException.py
geoclima_weather/infrastructure/provider/: weather_data_provider.py
geoclima_weather/presentation/: weather_controller.py
geoclima_weather/presentation/model/: weather_data_request.py
utils/: constants.py  utils.py
